--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "Configure"]
+	path = Configure
+	url = https://github.com/ox223252/Configure.git
 [submodule "src/lib/base64"]
 	path = src/lib/base64
 	url = https://github.com/ox223252/base64.git
